# smart-plug

./: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
components/ir_db/: CMakeLists.txt
components/ir_db/api/: ac_ir_tx.c  ir_remote.c  tv_ir_tx.c
components/ir_db/api/include/: ac_ir_tx.h  ir_remote.h  tv_ir_tx.h
components/ir_db/db/: ac_db_form.c  tv_db_form.c
components/ir_db/db/include/: ac_db_form.h  global_db_typedef.h  tv_db_form.h
components/led/: Kconfig  led.c
components/led/include/: iot_led.h
main/: CMakeLists.txt  app_cloud.c  app_cmd.c  app_driver.c  app_main.c  app_ota.c  app_scene.c  app_uart.c  app_webserver.c  app_wifi.c
main/include/: app_cloud.h  app_cmd.h  app_driver.h  app_scene.h  app_uart.h  global.h
