idf_component_register(SRCS "db/ac_db_form.c"
                            "db/tv_db_form.c"
                            "api/ac_ir_tx.c"
                            "api/tv_ir_tx.c"
                            "api/ir_remote.c"
                    INCLUDE_DIRS "db/include"
                                 "api/include")